--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cocolian</groupId>
 	<artifactId>cocolian-parent</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Cocolian Parent Pom</name>
 	<url>https://github.com/cocolian/cocolian-parent</url>
